# floodground-project

./: Cargo.toml  README.md
.claude/: settings.local.json
assets/data/: actors.ron  food.ron  items.ron  terrain.ron
docs/design/: 世界观.md  未来展望.md  架构设计.md  游戏介绍.md  设计约束.md
docs/dev/: AI约束.md  对话纪要.md
docs/plans/: 06-天气系统.md  08-旧石器时代-生存.md  09-水源与温度.md  10-存档系统.md  11-狩猎与食物.md  12-工具损耗与殖民者AI.md  归档-已完成计划.md
scripts/: 启动血壤.bat  启动血壤.ps1
src/: app.rs  app_types.rs  components.rs  data.rs  desc.rs  entity_kind.rs  events.rs  items.rs  lib.rs  main.rs  narrative.rs  save.rs  snapshot_macro.rs  village.rs  world.rs
src/systems/: ai.rs  building.rs  butcher.rs  combat.rs  crafting.rs  dark.rs  debug_commands.rs  eat.rs  examine.rs  farming.rs  harvest.rs  input.rs  interact.rs  mod.rs  movement.rs  nature.rs  needs.rs  prey_ai.rs  prey_ecology.rs  reaction.rs  terrain_gen.rs  weather.rs
src/ui/: craft_menu.rs  debug_popup.rs  inspect_popup.rs  log_view.rs  map_view.rs  menu.rs  mod.rs  side_panel.rs
tests/: init_smoke.rs
