[package]
name = "bloodsoil"
version = "0.0.1"
edition = "2021"

[dependencies]
hecs = "0.10"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand = "0.8"
thiserror = "1"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
